test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-nil.good
init-field-dflt-nonnil-borrowed-from-oknil-nil.chpl:8: error: Cannot initialize lhs of non-nilable type 'borrowed MyClass' from nil
